--- a/InHello/src/main/resources/application.yml
+++ b/InHello/src/main/resources/application.yml
@@ -28,10 +28,10 @@ spring:
       bindings:
         event-in:
           group: InHello
-          destination: gcumsa
+          destination: gcumsas
           contentType: application/json
         event-out:
-          destination: gcumsa
+          destination: gcumsas
           contentType: application/json
 
 logging:
@@ -67,10 +67,10 @@ spring:
       bindings:
         event-in:
           group: InHello
-          destination: gcumsa
+          destination: gcumsas
           contentType: application/json
         event-out:
-          destination: gcumsa
+          destination: gcumsas
           contentType: application/json
 
 api:
