--- a/InHello/pom.xml
+++ b/InHello/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.3.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>gcumsa</groupId>
+	<groupId>gcumsas</groupId>
 	<artifactId>InHello</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>InHello</name>
