--- a/OutHello/src/main/resources/application.yml
+++ b/OutHello/src/main/resources/application.yml
@@ -28,10 +28,10 @@ spring:
       bindings:
         event-in:
           group: OutHello
-          destination: gcumsa
+          destination: gcumsas
           contentType: application/json
         event-out:
-          destination: gcumsa
+          destination: gcumsas
           contentType: application/json
 
 logging:
@@ -63,10 +63,10 @@ spring:
       bindings:
         event-in:
           group: OutHello
-          destination: gcumsa
+          destination: gcumsas
           contentType: application/json
         event-out:
-          destination: gcumsa
+          destination: gcumsas
           contentType: application/json
 
 
